objects/dsfs__EnvelopeConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>dsfs__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__CEM__c</fullName>
        <label>Custom Email Message</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__CES__c</fullName>
        <label>Custom Email Subject</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__ExpireAfter__c</fullName>
        <label>Expire After</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dsfs__ExpireEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expire Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__ExpireWarn__c</fullName>
        <label>Expire Warn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dsfs__Expires__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expire Envelope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__LA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Load Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__LF__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Load Files</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__LoadDefaultContacts__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Load Default Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__OCO__c</fullName>
        <label>One Click Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tag</fullName>
                </value>
                <value>
                    <fullName>Send</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dsfs__Object_Type__c</fullName>
        <label>Object Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__ReminderDelay__c</fullName>
        <label>Reminder Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dsfs__ReminderEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__ReminderFrequency__c</fullName>
        <label>Reminder Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dsfs__SAA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Add Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__SCS__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Chatter Settings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__SEM__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Email Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__SES__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Email Subject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__SRS__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Remind Expire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__SSB__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Send Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__STB__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Tag Button</label>
        <type>Checkbox</type>
    </fields>
    <label>DocuSign Envelope Configuration</label>
    <listViews>
        <fullName>dsfs__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DocuSign Envelope Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Envelope Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>